# rest-api-for-csv-files

./: .env  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  app.py  config.py  requirements.txt
api/csv_app/: __init__.py
api/csv_app/models/: department.py  employee.py  job.py
api/csv_app/routes/: __init__.py  departments_above_average_hiring.py  employee_quarter_stats.py  insert_csv.py
api/csv_app/utils/: csv_handler.py  file_handler.py  insert_handler.py
database/: Dockerfile
