[tool.poetry]
name = "REST-API-for-CSV-files"
version = "0.1.0"
description = "A REST API to extract, load, and transform CSV files"
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
