[tool.poetry]
name = "REST-API-for-CSV-files"
version = "0.1.0"
description = "A REST API to extract, load, and transform CSV files"
authors = ["Gabriel Bossardi <contato@gabrielbossardi.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"

[tool.poetry.extras]
api = ["flask", "gunicorn", "psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
